# pytest-fastapi-crud-example

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: database.py  main.py  models.py  schemas.py  user.py
tests/: conftest.py  test_crud_api.py
tests/unit/: test_crud_api.py
