[tool.poetry]
name = "pytest-fastapi-crud-example"
version = "0.1.0"
description = "Example of testing a FastAPI CRUD API in Pytest"
authors = ["ericsalesdeandrade <sdaeric19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.3"
fastapi-utils = "^0.2.1"
uvicorn = "^0.29.0"
pydantic = "<2.0, >=1.7.4"
httpx = "^0.27.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
